Add remaining header content and stylize

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
                 <li>Pricing</li>
             </ul>
         </div>
+        <div class="header-content">
+            <div class="header-content-text white">
+                <h1>Elevate your game, master your world.</h1>
+                <p>Whether you want to become a professional player or just impress your friends, level up your game and dominate the competiton with our award-winning coaches.</p>
+                <button class="header-text-button white">Sign up</button>
+            </div>
+            <div class="header-content-image">
+                <img alt="4 professional video game players fixated on their screens." src="./images/pro-players.jpg"/>
+            </div>
+        </div>
     </div>
     <div class="body-wrapper">
 
