Adjust header content styling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="header-content">
             <div class="header-content-text white">
-                <h1>Elevate your game, master your world.</h1>
-                <p>Whether you want to become a professional player or just impress your friends, level up your game and dominate the competiton with our award-winning coaches.</p>
+                <h1 class="header-content-title">Elevate your game, master your world.</h1>
+                <p class="header-content-para">Whether you want to become a professional player or just impress your friends, level up your game and dominate the competition with our award-winning coaches. Join us on a journey to unlock your true gaming potential, one victory at a time.</p>
                 <button class="header-text-button white">Sign up</button>
             </div>
             <div class="header-content-image">
