Add and stylize rest of page content

--- a/index.html
+++ b/index.html
@@ -28,10 +28,50 @@
         </div>
     </div>
     <div class="body-wrapper">
+        <div class="body-1 section-padding">
+            <h2 class="coach-header">Our Coaches</h2>
+            <div class="coaches-wrapper">
+                <div class="coach-1-wrapper">
+                    <img src="./images/coach-1.jpg" class="coach-img">
+                    <h3>Sarah</h3>
+                    <p>Sarah specializes in strategic gameplay across various genres. </p>
+                </div>
+                <div class="coach-2-wrapper">
+                    <img src="./images/coach-2.jpg" class="coach-img">
+                    <h3>Jake</h3>
+                    <p>Jake's lightning-fast reflexes and pinpoint accuracy make him a formidable force in shooters. </p>
+                </div>
+                <div class="coach-3-wrapper">
+                    <img src="./images/coach-3.jpg" class="coach-img"> 
+                    <h3>Amanda</h3>
+                    <p>Amanda is renowned for her exceptional support play in team-based games. </p>
+                </div>
+                <div class="coach-4-wrapper">
+                    <img src="./images/coach-4.jpg" class="coach-img">
+                    <h3>Max</h3>
+                    <p>Max is a jack-of-all-trades, excelling in a wide range of game genres.</p>
+                </div>
+            </div>
+        </div>
+        <div class="body-2 section-padding">
+            <p class="quote">"Thanks to GameCoachPro, I've gone from a casual player to a competitive force in my favorite games. Their coaches transformed my gaming experience, and now I'm achieving victories I never thought possible!"</p>
+            <p class="quote-sayer">- Emily S.</p>
+        </div>
+        <div class="body-3 section-padding">
+            <div class="call-box white">
+                <div class="call-text-wrapper">
+                    <p class="call-title">Up your game today!</p>
+                    <p class="call-text">Sign up now for 1 free month of coaching!</p>
+                </div>
+               <div>
+                <button class="call-button">Sign up</button>
+               </div>
 
+            </div>
+        </div>
     </div>
-    <div class="footer-wrapper">
-
+    <div class="footer-wrapper white">
+        <p>Copyright @ The Odin Project 2021</p>
     </div>
 </body>
 </html>
